# weird-facct

./: README.md  facct.ipynb  pyproject.toml
datasets/: affil_2018.tsv  affiliations.tsv  chi.tsv  chi_affil.tsv  chi_country.tsv  chi_psi_p.csv  chi_year.tsv  facct_countries.csv  facct_year.tsv  paper_2018.csv  western.csv
