[tool.poetry]
name = "weird-facct"
version = "0.1.0"
description = ""
authors = ["Ali Akbar Septiandri <ali.septiandri@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "weird_facct"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
seaborn = "^0.12.2"
beautifulsoup4 = "^4.12.2"
geopandas = "^0.12.2"
scipy = "^1.10.1"
Cartopy = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
